# klean

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALLATION.md  LICENSE  README.md
.cargo/: config.toml
.github/actions/build-binary/: action.yml
.github/workflows/: aur-update.yml  build-release.yml  docker.yml  homebrew-update.yml  linux-packages.yml  scoop-update.yml  windows-packages.yml
examples/: .klignore  .klignore-minimal  klean-minimal.toml  klean.toml
examples/package-managers/chocolatey/: chocolateyinstall.ps1  chocolateyuninstall.ps1  klean.nuspec
examples/package-managers/homebrew/: klean.rb
examples/package-managers/scoop/: klean.json
src/: cleaner.rs  cli.rs  config.rs  ignore.rs  main.rs  patterns.rs  scanner.rs
src/tui/: interactive.rs  mod.rs
tests/: integration_test.rs
