[package]
name = "klean"
version = "0.1.3"
edition = "2021"
authors = ["danil0ws"]
description = "A safe, efficient, and extensible CLI tool for cleaning development environments"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danil0ws/klean"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
fs_extra = "1.3"
rayon = "1.8"
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
humansize = "2.1"
chrono = "0.4"
once_cell = "1.19"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true
